# iCTS

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt  CTSAPI.cc  CTSAPI.hh
source/data_manager/database/: CtsNet.cc
source/data_manager/io/: CtsDBWrapper.cc
source/module/evaluator/: Evaluator.cc  Evaluator.hh
source/module/router/: Router.cc
source/solver/: Solver.cc  Solver.hh
source/solver/tools/: CMakeLists.txt
source/solver/tools/SCG/: CMakeLists.txt  SCG_builder.cc  SCG_builder.hh
source/solver/tools/balance_clustering/: CMakeLists.txt
source/solver/tools/tree_builder/: TreeBuilder.cc
test/: CMakeLists.txt  SCGTest.cc
